@@ -1,21 +1,23 @@
 import io.gitlab.arturbosch.detekt.DetektCreateBaselineTask
-import java.util.Locale
+import org.jetbrains.kotlin.gradle.ExperimentalKotlinGradlePluginApi
+import org.jetbrains.kotlin.gradle.dsl.KotlinVersion.KOTLIN_2_0
+import org.jlleitschuh.gradle.ktlint.reporter.ReporterType
 
-val projectJvmTarget = "11"
+val projectJvmTarget = 17
 val satisfyingNumberOfCores = Runtime.getRuntime().availableProcessors().div(2).takeIf { it > 0 } ?: 1
-val ktlint: Configuration by configurations.creating
-val isK2Enabled = true
-val k2CompilerArg = if (isK2Enabled) listOf("-Xuse-k2") else emptyList()
+val kotlinVersion = KOTLIN_2_0
 
 fun isLinux(): Boolean {
-    val osName = System.getProperty("os.name").toLowerCase(Locale.ROOT)
+    val osName = System.getProperty("os.name").lowercase()
     return listOf("linux", "mac os", "macos").contains(osName)
 }
 
 @Suppress("DSL_SCOPE_VIOLATION") // https://youtrack.jetbrains.com/issue/KTIJ-19369
 plugins {
+    base
     application
     jacoco
+    id("com.github.nbaztec.coveralls-jacoco") version "1.2.16"
     idea
     alias(libs.plugins.kt.jvm)
     alias(libs.plugins.detekt)
@@ -23,6 +25,13 @@ plugins {
     alias(libs.plugins.spotless)
     alias(libs.plugins.dependency.analysis)
     alias(libs.plugins.pitest)
+    alias(libs.plugins.kover)
+    alias(libs.plugins.diktat)
+    alias(libs.plugins.ktlint)
+}
+
+jacoco {
+    toolVersion = "0.8.12"
 }
 
 repositories {
@@ -36,42 +45,50 @@ application {
     mainClass.set("link.kotlin.scripts.Application")
 }
 
-val outputDir = "${project.buildDir}/reports/ktlint/"
-val inputFiles = project.fileTree(mapOf("dir" to "src", "include" to "**/*.kt"))
-
-val ktlintCheck by tasks.creating(JavaExec::class) {
-    inputs.files(inputFiles)
-    outputs.dir(outputDir)
-
-    description = "Check Kotlin code style."
-    classpath = ktlint
-    mainClass.set("com.pinterest.ktlint.Main")
-    args = listOf("src/**/*.kt")
-}
-
-val ktlintFormat by tasks.creating(JavaExec::class) {
-    inputs.files(inputFiles)
-    outputs.dir(outputDir)
-
-    description = "Fix Kotlin code style deviations."
-    classpath = ktlint
-    mainClass.set("com.pinterest.ktlint.Main")
-    args = listOf("-F", "src/**/*.kt")
-}
-
-plugins.withId("info.solidsoft.pitest") {
-    configure<info.solidsoft.gradle.pitest.PitestPluginExtension> {
-        jvmArgs.set(listOf("-Xmx1024m"))
-        avoidCallsTo.set(setOf("kotlin.jvm.internal", "kotlin.Result"))
-        targetClasses.set(setOf("dev.shtanko.template.*"))
-        targetTests.set(setOf("dev.shtanko.template.*"))
-        pitestVersion.set("1.4.11")
-        verbose.set(true)
-        threads.set(System.getenv("PITEST_THREADS")?.toInt() ?: satisfyingNumberOfCores)
-        outputFormats.set(setOf("XML", "HTML"))
-        testPlugin.set("junit5")
-        junit5PluginVersion.set("0.12")
+configure<org.jlleitschuh.gradle.ktlint.KtlintExtension> {
+    debug.set(true)
+    verbose.set(true)
+    android.set(false)
+    outputToConsole.set(true)
+    outputColorName.set("RED")
+    ignoreFailures.set(true)
+    enableExperimentalRules.set(true)
+    reporters {
+        reporter(ReporterType.PLAIN)
+        reporter(ReporterType.CHECKSTYLE)
+        reporter(ReporterType.JSON)
+        reporter(ReporterType.HTML)
     }
+    kotlinScriptAdditionalPaths {
+        include(fileTree("scripts/"))
+    }
+    filter {
+        exclude("**/generated/**")
+        include("**/kotlin/**")
+    }
+}
+
+diktat {
+    inputs {
+        include("src/main/**/*.kt")
+        exclude("**/generated/**")
+    }
+}
+
+pitest {
+    jvmArgs.set(listOf("-Xmx8192m"))
+    avoidCallsTo.set(setOf("kotlin.jvm.internal", "kotlin.Result"))
+    targetClasses.set(setOf("dev.shtanko.*"))
+    targetTests.set(setOf("dev.shtanko.*"))
+    pitestVersion.set("1.15.0")
+    verbose.set(true)
+    timestampedReports.set(false)
+    threads.set(System.getenv("PITEST_THREADS")?.toInt() ?: satisfyingNumberOfCores)
+    outputFormats.set(setOf("XML", "HTML"))
+    testPlugin.set("junit5")
+    junit5PluginVersion = "1.2.1"
+    setWithHistory(true)
+    mutationThreshold.set(40)
 }
 
 spotless {
@@ -81,9 +98,9 @@ spotless {
                 mapOf(
                     "dir" to ".",
                     "include" to listOf("**/*.kt"),
-                    "exclude" to listOf("**/build/**", "**/spotless/*.kt")
-                )
-            )
+                    "exclude" to listOf("**/build/**", "**/spotless/*.kt"),
+                ),
+            ),
         )
         trimTrailingWhitespace()
         indentWithSpaces()
@@ -98,7 +115,47 @@ subprojects {
     apply<com.diffplug.gradle.spotless.SpotlessPlugin>()
 }
 
+kover {
+    reports {
+        verify {
+            rule {
+                minBound(80)
+            }
+        }
+    }
+}
+
 tasks {
+    withType<Test> {
+        maxParallelForks = 1
+        jvmArgs(
+            "--add-opens",
+            "java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-exports",
+            "java.base/jdk.internal.util=ALL-UNNAMED",
+            "--add-exports",
+            "java.base/sun.security.action=ALL-UNNAMED",
+        )
+    }
+    compileKotlin {
+        compilerOptions {
+            apiVersion.set(kotlinVersion)
+            languageVersion.set(kotlinVersion)
+        }
+    }
+    kotlin {
+        jvmToolchain(projectJvmTarget)
+    }
+    jacocoTestCoverageVerification {
+        violationRules {
+            rule {
+                limit {
+                    minimum = "0.5".toBigDecimal()
+                }
+            }
+        }
+    }
+
     register<Copy>("copyGitHooks") {
         description = "Copies the git hooks from scripts/git-hooks to the .git folder."
         group = "git hooks"
@@ -135,18 +192,19 @@ tasks {
     }
 
     jacocoTestReport {
+        dependsOn(test)
         reports {
-            html.required.set(true)
-            xml.required.set(true)
-            xml.outputLocation.set(file("$buildDir/reports/jacoco/report.xml"))
+            listOf(
+                html,
+                xml,
+                csv,
+            ).forEach { it.required.set(true) }
         }
-        executionData(file("build/jacoco/test.exec"))
     }
 
     withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile>().configureEach {
-        kotlinOptions {
-            jvmTarget = projectJvmTarget
-            freeCompilerArgs = freeCompilerArgs + k2CompilerArg
+        compilerOptions {
+            apiVersion.set(KOTLIN_2_0)
         }
     }
 
@@ -155,52 +213,77 @@ tasks {
         parallel = true
         baseline.set(file("$rootDir/config/detekt/detekt-baseline.xml"))
         config.from(file("config/detekt/detekt.yml"))
-        jvmTarget = projectJvmTarget
+        jvmTarget = "$projectJvmTarget"
 
         setSource(files("src/main/kotlin", "src/test/kotlin"))
-        include("**/*.kt")
-        include("**/*.kts")
-        exclude(".*/resources/.*")
-        exclude(".*/build/.*")
-        exclude("/versions.gradle.kts")
+        setOf(
+            "**/*.kt",
+            "**/*.kts",
+            ".*/resources/.*",
+            ".*/build/.*",
+            "/versions.gradle.kts",
+        ).forEach {
+            include(it)
+        }
 
         reports {
-            xml.required.set(true)
-            html.required.set(true)
-            txt.required.set(true)
-            md.required.set(true)
+            reports.apply {
+                listOf(xml, html, txt, md).forEach { it.required.set(true) }
+            }
         }
     }
 
     withType<DetektCreateBaselineTask> {
-        jvmTarget = projectJvmTarget
+        jvmTarget = "$projectJvmTarget"
     }
 
     withType<Test>().configureEach {
-        jvmArgs = listOf(
-            "-Dkotlintest.tags.exclude=Integration,EndToEnd,Performance",
-        )
+        jvmArgs =
+            listOf(
+                "-Dkotlintest.tags.exclude=Integration,EndToEnd,Performance",
+            )
         testLogging {
             events("passed", "skipped", "failed")
         }
         testLogging.showStandardStreams = true
         useJUnitPlatform()
+        finalizedBy(withType(JacocoReport::class.java))
     }
+}
 
-    withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile>().configureEach {
-        kotlinOptions {
-            jvmTarget = projectJvmTarget
+kotlin {
+    @OptIn(ExperimentalKotlinGradlePluginApi::class)
+    compilerOptions {
+        freeCompilerArgs.apply {
+            listOf(
+                "-Xexpect-actual-classes",
+                "-Xwhen-guards",
+                "-Xnon-local-break-continue",
+                "-Xmulti-dollar-interpolation",
+            ).forEach(::add)
         }
+        apiVersion.set(KOTLIN_2_0)
+        languageVersion.set(KOTLIN_2_0)
     }
 }
 
 dependencies {
-    implementation(libs.kotlin.stdlib)
-    implementation(libs.kotlin.reflect)
-    implementation(libs.kotlin.coroutines)
-    ktlint(libs.ktlint)
-
-    testImplementation(libs.mockk)
-    testImplementation(libs.junit)
-    testImplementation(libs.assertj)
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher") { because("required for pitest") }
+    libs.apply {
+        kotlin.apply {
+            implementation(stdlib)
+            runtimeOnly(reflect)
+            compileOnly(coroutines)
+        }
+        testImplementation(mockk)
+        testImplementation(assertj)
+        junit.apply {
+            testImplementation(api)
+            testImplementation(params)
+        }
+        mockito.apply {
+            // testImplementation(mockito) // not under usage for now
+            // testImplementation(mockito.kotlin) // not under usage for now
+        }
+    }
 }
